[package]
name = "promethean"
version = "1.0.0"
authors = ["Shekn Itrch <cgproggame@gmail.com>"]
edition = "2021"

[lib]
name = "promethean_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "promethean_bin"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
